tests/snapshots/integration__integration_tests__merge__merge_squash_with_working_tree_creates_backup.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - merge
    - main
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_COMMIT_GENERATION__ARGS: "fix: update files"
    WORKTRUNK_COMMIT_GENERATION__COMMAND: echo
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----
🔄 [36mSquashing 2 commits with working tree changes into 1[0m (2 files, [32m+2[0m)...
💡 Backup created @ [SHA]
🔄 [36mGenerating squash commit message...[0m
💡 [2mUsing fallback commit message. Run 'wt config --help' for LLM setup guide[0m
[107m [0m  [1mSquash commits from main[0m
[107m [0m  
[107m [0m  Combined commits:
[107m [0m  - feat: add file 1
[107m [0m  - feat: add file 2
✅ [32mSquashed @ [2m[SHA][0m
🔄 [36mMerging 1 commit to [1m[36mmain[0m[36m @ [2m[SHA][0m (no rebase needed)
[107m [0m  * [SHA][33m ([m[1;36mHEAD[m[33m -> [m[1;32mfeature[m[33m)[m Squash commits from main
[107m [0m   file1.txt | 1 [32m+[m
[107m [0m   file2.txt | 1 [32m+[m
[107m [0m   2 files changed, 2 insertions(+)
✅ [32mMerged to [1m[32mmain[0m[0m (1 commit, 2 files, [32m+2[0m)
🔄 [36mRemoving [1m[36mfeature[0m[36m worktree & branch in background[0m

----- stderr -----
