tests/snapshots/integration__integration_tests__merge__merge_with_keep.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - merge
    - main
    - "--keep"
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1704067200"
---
success: true
exit_code: 0
----- stdout -----
Rebasing onto [1mmain[0m...
Fast-forwarding [1mmain[0m to current HEAD...
Pushing 1 commit to [1mmain[0m
Successfully pushed to [1mmain[0m
Successfully merged to [1mmain[0m (worktree preserved)

----- stderr -----
